--- a/blog.html
+++ b/blog.html
@@ -57,7 +57,7 @@
   <div class="container">
     <div class="row">
       <div class="col">
-        <div class="titulo-preto text-center">Posts mais recentes</div>
+        <div class="titulo-preto-blog">Posts mais recentes</div>
       </div>
     </div>
     <div class="row">
@@ -102,7 +102,7 @@
 
   <footer class="footer py-5">
     <div class="container">
-      <div class="row border-bottom">
+      <div class="row border-bottom" style="padding-bottom: 10px;">
         <div class="col-md-2">
           <object data="img/logo-pg-rodape.svg" type="image/svg+xml"></object>
         </div>
