--- a/contacto.html
+++ b/contacto.html
@@ -65,7 +65,7 @@
       <div class="row">
         <div class="col">
           <div class="row">
-            <div class="col-md-5 p-3">
+            <div class="col-md-5 p-4">
 
               <form action="contacto.json" id="contact-form" modelAttribute="contacto" commandName="contacto"
                 method="post" class="form-wrapper">
@@ -73,7 +73,7 @@
                 <div class="row">
                   <div class="col-md-6">
                     <div class="input-group mb-3">
-                      <span class="input-group-text">
+                      <span class="input-group-text input-group-icon">
                         <img src="img/IconPerson.svg" alt="Nome">
                       </span>
                       <input type="text" class="form-control" id="nome" name="nome" placeholder="Nome" maxlength="100"
@@ -82,7 +82,7 @@
                   </div>
                   <div class="col-md-6">
                     <div class="input-group mb-3">
-                      <span class="input-group-text">
+                      <span class="input-group-text input-group-icon">
                         <img src="img/IconPhone.svg" alt="Telemovel">
                       </span>
                       <input type="text" class="form-control" id="telemovel" name="telemovel" placeholder="Contacto"
@@ -93,7 +93,7 @@
                 <div class="row">
                   <div class="col-md-6">
                     <div class="input-group mb-3">
-                      <span class="input-group-text">
+                      <span class="input-group-text input-group-icon">
                         <img src="img/IconMail.svg" alt="Nome">
                       </span>
                       <input type="email" class="form-control" id="email" name="email" placeholder="Email"
@@ -102,7 +102,7 @@
                   </div>
                   <div class="col-md-6">
                     <div class="input-group mb-3">
-                      <span class="input-group-text">
+                      <span class="input-group-text input-group-icon">
                         <img src="img/IconLightbulb.svg" alt="Nome">
                       </span>
                       <input type="text" class=" form-control" id="assunto" name="assunto" placeholder="Assunto"
@@ -113,7 +113,7 @@
                 <div class="row">
                   <div class="col-md-12">
                     <div class="input-group mb-3">
-                      <span class="input-group-text" style="display: flow;">
+                      <span class="input-group-text input-group-icon" style="display: flow;">
                         <img src="img/IconEdit.svg" alt="Mensagem">
                       </span>
                       <textarea class="form-control" id="mensagem" name="mensagem" rows="9" cols="50" maxlength="400"
@@ -132,7 +132,7 @@
             </div>
 
 
-            <div class="col-md-3 p-3">
+            <div class="col-md-3 p-4">
               <div class="row contact-border-bottom">
                 <div class="col">
                   <div class="contact-titulo">Apoio por mensagem whatsapp</div>
@@ -199,7 +199,7 @@
 
             </div>
 
-            <div class="col-md-4 p-3">
+            <div class="col-md-4 p-4">
               <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
                 src="img/contacto.png" alt="WEBIFY" />
 
@@ -215,7 +215,7 @@
 
   <footer class="footer py-5">
     <div class="container">
-      <div class="row border-bottom">
+      <div class="row border-bottom" style="padding-bottom: 10px;">
         <div class="col-md-2">
           <object data="img/logo-pg-rodape.svg" type="image/svg+xml"></object>
         </div>
