--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             Cobranças e faturação descomplicadas
           </p>
           <p class="jumbo-text">
-            uma forma rápida e intuitiva de organizar a sua faturação e
+            Uma forma rápida e intuitiva de organizar a sua faturação e
             agendar cobranças automáticas
           </p>
           <div>
@@ -239,7 +239,7 @@
               <tr>
                 <td>
                   <div class="input-group">
-                    <span class="input-group-text">
+                    <span class="input-group-text input-group-icon">
                       <img src="img/IconMail.svg" alt="Nome">
                     </span>
                     <input type="email" class="form-control contact-input" id="emailnewsletter" name="emailnewsletter"
@@ -357,7 +357,7 @@
               <div class="row">
                 <div class="col-md-6">
                   <div class="input-group mb-3">
-                    <span class="input-group-text">
+                    <span class="input-group-text input-group-icon">
                       <img src="img/IconPerson.svg" alt="Nome">
                     </span>
                     <input type="text" class="form-control" id="nome" name="nome" placeholder="Nome" maxlength="100"
@@ -366,7 +366,7 @@
                 </div>
                 <div class="col-md-6 ">
                   <div class="input-group mb-3">
-                    <span class="input-group-text">
+                    <span class="input-group-text input-group-icon">
                       <img src="img/IconPhone.svg" alt="Telemovel">
                     </span>
                     <input type="text" class="form-control" id="telemovel" name="telemovel" placeholder="Contacto"
@@ -377,7 +377,7 @@
               <div class="row">
                 <div class="col-md-6 ">
                   <div class="input-group mb-3">
-                    <span class="input-group-text">
+                    <span class="input-group-text input-group-icon">
                       <img src="img/IconMail.svg" alt="Nome">
                     </span>
                     <input type="email" class="form-control" id="email" name="email" placeholder="Email" maxlength="100"
@@ -386,7 +386,7 @@
                 </div>
                 <div class="col-md-6 ">
                   <div class="input-group mb-3">
-                    <span class="input-group-text">
+                    <span class="input-group-text input-group-icon">
                       <img src="img/IconLightbulb.svg" alt="Nome">
                     </span>
                     <input type="text" class=" form-control" id="assunto" name="assunto" placeholder="Assunto"
@@ -397,7 +397,7 @@
               <div class="row">
                 <div class="col-md-12 ">
                   <div class="input-group mb-3">
-                    <span class="input-group-text" style="display: flow;">
+                    <span class="input-group-text input-group-icon" style="display: flow;">
                       <img src="img/IconEdit.svg" alt="Mensagem">
                     </span>
                     <textarea class="form-control" id="mensagem" name="mensagem" rows="9" cols="50" maxlength="400"
@@ -405,7 +405,6 @@
                   </div>
                 </div>
               </div>
-
 
               <div class="row">
                 <div class="col-md-6"></div>
