--- a/planos.html
+++ b/planos.html
@@ -47,10 +47,11 @@
   <div class="fundo-planos">
     <div class="p-5 rounded-3 row align-items-md-stretch">
       <div class="row">
-        <div class="p-5 col-md-6 col-sm-12 jumbo-logo-planos text-center">
+        <div class="p-5 col-md-4 col-sm-12 jumbo-logo-planos text-center">
           <object class="img-fluid" width="450" data="img/planos-pg-logo.svg" type="image/svg+xml"></object>
         </div>
-        <div class="p-5 col-md-6 col-sm-12">
+        <div class="col-md-3 col-sm-12"></div>
+        <div class="p-5 col-md-5 col-sm-12">
           <p class="h-20 jumbo-text-planos">
             A solução inovadora projetada para melhorar a produtividade na área das cobranças e faturação.
           </p>
@@ -261,7 +262,7 @@
 
   <footer class="footer py-5">
     <div class="container">
-      <div class="row border-bottom">
+      <div class="row border-bottom" style="padding-bottom: 10px;">
         <div class="col-md-2">
           <object data="img/logo-pg-rodape.svg" type="image/svg+xml"></object>
         </div>
