--- a/quemsomos.html
+++ b/quemsomos.html
@@ -143,7 +143,7 @@
 
   <footer class="footer py-5">
     <div class="container">
-      <div class="row border-bottom">
+      <div class="row border-bottom" style="padding-bottom: 10px;">
         <div class="col-md-2">
           <object data="img/logo-pg-rodape.svg" type="image/svg+xml"></object>
         </div>
