--- a/faqs.html
+++ b/faqs.html
@@ -47,7 +47,7 @@
   <div class="fundo-faqs">
     <div class="row">
       <div class="col">
-        <div class="jumbo-header-planos" style="vertical-align: middle;">
+        <div class="jumbo-header-planos">
           Perguntas frequentes
         </div>
       </div>
@@ -142,7 +142,7 @@
 
   <footer class="footer py-5">
     <div class="container">
-      <div class="row border-bottom">
+      <div class="row border-bottom" style="padding-bottom: 10px;">
         <div class="col-md-2">
           <object data="img/logo-pg-rodape.svg" type="image/svg+xml"></object>
         </div>
