--- a/contacto.html
+++ b/contacto.html
@@ -184,7 +184,7 @@
                   </div>
                 </div>
               </div>
-              <div class="row contact-border-bottom">
+              <div class="row">
                 <div class="col">
                   <div class="contact-titulo">Facebook</div>
                   <div class="contact-conteudo">
@@ -215,7 +215,7 @@
 
   <footer class="footer py-5">
     <div class="container">
-      <div class="row border-bottom" style="padding-bottom: 10px;">
+      <div class="row border-bottom">
         <div class="col-md-2">
           <object data="img/logo-pg-rodape.svg" type="image/svg+xml"></object>
         </div>
