--- a/faqs.html
+++ b/faqs.html
@@ -142,7 +142,7 @@
 
   <footer class="footer py-5">
     <div class="container">
-      <div class="row border-bottom" style="padding-bottom: 10px;">
+      <div class="row border-bottom">
         <div class="col-md-2">
           <object data="img/logo-pg-rodape.svg" type="image/svg+xml"></object>
         </div>
