--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                 </div>
               </div>
             </div>
-            <div class="row contact-border-bottom">
+            <div class="row">
               <div class="col">
                 <div class="contact-titulo">Facebook</div>
                 <div class="contact-conteudo">
@@ -423,18 +423,22 @@
 
   <footer class="footer py-5">
     <div class="container">
-      <div class="row border-bottom" style="padding-bottom: 10px;">
+      <div class="row border-bottom">
         <div class="col-md-2">
           <object data="img/logo-pg-rodape.svg" type="image/svg+xml"></object>
         </div>
         <div class="col-10 col-md-auto mb-2 mb-md-0">
           <ul class="nav">
-            <li><a href="planos.html" class="btn header-menu-item menu-item-footer">PAY&GO</a></li>
-            <li><a href="quemsomos.html" class="btn header-menu-item menu-item-footer">Quem Somos</a></li>
-            <li><a href="blog.html" class="btn header-menu-item menu-item-footer">Blog</a></li>
-            <li><a href="faqs.html" class="btn header-menu-item menu-item-footer">FAQs</a></li>
-            <li><a href="contacto.html" class="btn header-menu-item menu-item-footer">Contactos</a></li>
-            <li><a href="termos.html" class="btn header-menu-item menu-item-footer">Termos Legais</a></li>
+            <li style="padding:10px;"><a href="planos.html" class="btn header-menu-item menu-item-footer">PAY&GO</a>
+            </li>
+            <li style="padding:10px;"><a href="quemsomos.html" class="btn header-menu-item menu-item-footer">Quem
+                Somos</a></li>
+            <li style="padding:10px;"><a href="blog.html" class="btn header-menu-item menu-item-footer">Blog</a></li>
+            <li style="padding:10px;"><a href="faqs.html" class="btn header-menu-item menu-item-footer">FAQs</a></li>
+            <li style="padding:10px;"><a href="contacto.html"
+                class="btn header-menu-item menu-item-footer">Contactos</a></li>
+            <li style="padding:10px;"><a href="termos.html" class="btn header-menu-item menu-item-footer">Termos
+                Legais</a></li>
           </ul>
         </div>
       </div>
