--- a/planos.html
+++ b/planos.html
@@ -182,7 +182,7 @@
         <div class="col">
 
           <div class="card" style="border:0;">
-            <img src="img/icon_finanças.png" alt="Crescimento do negócio sem aumentar o esforço" />
+            <img src="img/icon_financas.png" alt="Crescimento do negócio sem aumentar o esforço" />
             <div class="card-body">
               <p class="card-text home-card-text">
                 Crescimento do negócio sem aumentar o esforço
